@@ -1,6 +1,8 @@
 Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
+  - Fix "Odd number of hash elements" in split if the last configured field is empty
+    (GitHub #2)
 
 0.52  2017-05-19
   - Make signature test a RELEASE or AUTHOR test only.  The test is skipped otherwise.
